# entity-enhance-classification

./: .gitignore  PIPELINE.md  README.md  pyproject.toml  run_comparisons.sh
data/: wd-id_mapping_debug.tsv
data-preprocessing/: README.md  add_entities_to_csv.py  analyze_jsonl_stats.py  analyze_splits.py  applyPatches.sh  collectData.sh  create_splits.py  describe_corpora.py  extract_entities.py  filter_valid_dates.py  plot_monthly_stats.py  pyproject.toml  requirements.txt  toCsvAll.sh
data-preprocessing/ids-lists/: all-gold-ids.txt  dev-gold-articles-ids.txt  test-gold-articles-ids.txt  train-downsampled-gold-articles-ids.txt  train-gold-articles-ids.txt  train-silver-article-ids.txt
data-preprocessing/src/: add_entities_to_all.sh  add_entities_to_csv.py  analyze_article_duplicates.py  analyze_jsonl_stats.py  analyze_silver_distributions.py  analyze_splits.py  category_split_analysis.py  create_splits.py  describe_corpora.py  entity_wordclouds.py  extract_entities_date.py  extract_wikidata_mapping.py  visualize_splits.py
data-preprocessing/src/entity_embeddings/: __init__.py  __main__.py  compute.py  constants.py  embed_text.py  wikipedia2vec.py
data-preprocessing/src/utils/: __init__.py  csv_io.py  dataset_names.py  date_parsing.py
data/article_embeddings_debug/: de_eurosport_833.npy  en_bbc_30981.npy  en_bbc_3214.npy  en_eurosport_4506.npy  fr_rts_13849.npy  fr_rts_40361.npy  fr_rts_9143.npy  nl_noordhollandsdagblad_15602.npy  nl_noordhollandsdagblad_2604.npy  nl_nu_141711.npy
data/cuted-articles_sample/: Q1000033_en_1.txt  Q1000046_en_1.txt  Q1000053_en_1.txt  Q1000060_en_1.txt
data/debug/: all-corpora-test-entities.sample_4plus1.csv  all-corpora-train-entities.sample_4plus1.csv
data/gold-chrono-per-dataset/: wdId_ids_sample.txt
models/: README.md
models/debug_20260706_215424/: custom_thresholds.json  iptc.config.yaml  threshold_report.csv
src/iptc_entity_pipeline/: __init__.py  analyze_entity_splits.py  article_embeddings.py  assembly.py  assembly_io.py  assembly_model.py  build_dataset.py  build_latex_table.py  category_sets.py  clearml_compat.py  clearml_pipeline.py  config.py  cross_validation.py  custom_embeddings.py  data_loading.py  embed_text.py  (+21 more)
tests/: test_article_embeddings.py  test_config.py  test_cross_validation_helpers.py  test_custom_embeddings.py  test_data_loading.py  test_dataset_builder.py  test_entity_embeddings.py  test_evaluation_comparison.py  test_evaluation_comparison_records.py  test_feature_builder.py  test_pooling.py  test_saved_pred_scores.py  test_threshold_tuning.py  test_training.py  test_wikipedia2vec_emb.py
wheels/: geneea-0.1.0-py3-none-any.whl
(+1605 files in other folders)
