[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'iptc-entity-enhance-classification'
version = '0.1.0'
description = 'ClearML pipeline for entity-enhanced IPTC multi-label classification'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'clearml~=1.16',
    'dill~=0.3',
    'numpy~=1.26',
    'optuna~=4.0',
    'pandas~=2.2',
    'iterative-stratification~=0.1',
    'sentence-transformers~=3.0',
    'torch~=2.5',
    'geneea.catlib~=2.14.2',
    'geneea.mediacats~=2.22.0',
    'geneea.evaluation~=1.37.0',
    'geneea.core~=1.14.2',
    'geneea.embedlib~=1.3.0',
    'geneea.corpora.tools~=1.8.0',
]

[project.optional-dependencies]
tests = ['pytest~=9.0']

[tool.setuptools]
package-dir = { '' = 'src' }

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
