[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'iptc-entity-enhance-classification'
version = '0.1.0'
description = 'ClearML pipeline for entity-enhanced IPTC multi-label classification'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'clearml~=1.16',
    'dill~=0.3',
    'numpy~=1.26',
    'optuna~=4.0',
    'pandas~=2.2',
    'iterative-stratification~=0.1',
    'matplotlib~=3.10',
    'sentence-transformers~=3.0',
    'torch~=2.5',
    'PyYAML~=6.0',
    'regex~=2024.0',
    'requests~=2.32',
    'statsmodels',
]

[project.optional-dependencies]
tests = [
    'pytest~=9.0',
]

[tool.setuptools]
package-dir = { '' = 'src' }

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
'iptc_entity_pipeline.resources' = ['*.yaml']
'geneea.mediacats.resources' = ['iptc-topics.json']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src', 'data-preprocessing/src']
